# Thesis_Repo

./: README.md
Ichor/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Ichor-master/: CMakeLists.txt  mainBST.cpp  mainEDF.cpp
Ichor-master/CyclicTest/: CMakeLists.txt  cyclicdeadline.c
Ichor-master/CyclicTest/Cyclic_test_ichor/: OtherTimerService.h  UsingTimeService.h  UsingTimerService.h  UsingTimerService1.h  main.cpp
Ichor-master/CyclicTest/Cyclic_test_ichor_NP/: main.cpp
Ichor-master/UseCase/: CMakeLists.txt
Ichor-master/UseCase/use-case/: OtherTimerService.h  UsingTimerService.h  main.cpp
Ichor-master/benchmarks/etcd_benchmark/: main.cpp
Ichor-master/benchmarks/event_benchmark/: main.cpp
Ichor-master/benchmarks/serializer_benchmark/: main.cpp
Ichor-master/benchmarks/start_benchmark/: main.cpp
Ichor-master/benchmarks/start_stop_benchmark/: StartStopService.h  main.cpp
Ichor-master/examples/: CMakeLists.txt
Ichor-master/examples/bjorn_usecase/: CalculationService.h  ControlLoopService.h  OtherTimerService.h  SafetyCheckService.h  UsingTimerService.h  main.cpp
Ichor-master/examples/bjorn_usecase/Task1/: CalculationService.h  ControlLoopService.h  main.cpp
Ichor-master/examples/bjorn_usecase/Task10/: CalculationService.h  ControlLoopService.h
Ichor-master/examples/bjorn_usecase/Task2/: ControlLoopService.h
Ichor-master/examples/bjorn_usecase/Task3/: ControlLoopService.h
Ichor-master/examples/bjorn_usecase/Task4/: CalculationService.h  ControlLoopService.h
Ichor-master/examples/bjorn_usecase/Task5/: ControlLoopService.h
Ichor-master/examples/bjorn_usecase/Task6/: CalculationService.h  ControlLoopService.h
Ichor-master/examples/bjorn_usecase/Task7/: ControlLoopService.h  main.cpp
Ichor-master/examples/bjorn_usecase/Task8/: CalculationService.h  ControlLoopService.h
Ichor-master/examples/bjorn_usecase/Task9/: CalculationService.h  ControlLoopService.h
Ichor-master/examples/multithreaded_example/: OneService.h  OtherService.h  main.cpp
Ichor-master/examples/optional_dependency_example/: main.cpp
Ichor-master/examples/realtime_example/: TestService.h  main.cpp
Ichor-master/examples/scheduler_queue_example/: CatchService.h  PlaceService.h  main.cpp
Ichor-master/examples/timer_example/: OtherTimerService.h  UsingTimerService.h  main.cpp
Ichor-master/examples/yielding_timer_example/: OtherTimerService.h  UsingTimerService.h  main.cpp
Ichor-master/include/ichor/: CommunicationChannel.h  DependencyManager.h  Events.h  bst.h  lock_free_bst.h
Ichor-master/include/ichor/interfaces/: IFrameworkLogger.h
Ichor-master/include/ichor/optional_bundles/logging_bundle/: Logger.h  LoggerAdmin.h
Ichor-master/include/ichor/optional_bundles/timer_bundle/: ITimer.h  TimerService.h
Ichor-master/logs/: framework-log-1627297416356.txt  framework-log-1627299960722.txt  framework-log-1627299990132.txt  framework-log-1627299994916.txt  framework-log-1627305425187.txt  framework-log-1631010381221.txt  framework-log-1631011437039.txt  framework-log-1631011442954.txt  framework-log-1631011728570.txt  framework-log-1631011751349.txt  framework-log-1631011768115.txt  framework-log-1631011793212.txt  framework-log-1631011865322.txt  framework-log-1631013776757.txt  framework-log-1631014732338.txt  framework-log-1631014757558.txt  framework-log-1631014883804.txt  framework-log-1631015172032.txt  framework-log-1631015907749.txt  framework-log-1631016146018.txt  framework-log-1631017964196.txt  framework-log-1632476244099.txt
Ichor-master/src/ichor/: DependencyManager.cpp
Ichor-master/test/: DependencyManagerTests.cpp  DependencyServicesTests.cpp  InterceptorTests.cpp
Ichor/CyclicTest/: Ichor_cyclictest.c  Makefile  cmake_install.cmake
Ichor/CyclicTest/Cyclic_test_ichor/: OtherTimerService.h  UsingTimerService.h  UsingTimerService1.h  main.cpp
Ichor/benchmarks/: Makefile  cmake_install.cmake
Ichor/benchmarks/etcd_benchmark/: main.cpp
Ichor/benchmarks/event_benchmark/: main.cpp
Ichor/benchmarks/start_benchmark/: TestService.h  main.cpp
Ichor/benchmarks/start_stop_benchmark/: main.cpp
Ichor/examples/: CMakeLists.txt  Makefile  cmake_install.cmake
Ichor/examples/bjorn_usecase/: CalculationService.h  OtherTimerService.h  UsingTimerService.h  main.cpp
Ichor/examples/etcd_example/: main.cpp
Ichor/examples/event_statistics_example/: main.cpp
Ichor/examples/http_example/: main.cpp
Ichor/examples/minimal_example/: main.cpp
Ichor/examples/multithreaded_example/: CustomEvent.h  OneService.h  OtherService.h  main.cpp
Ichor/examples/optional_dependency_example/: TestService.h  main.cpp
Ichor/examples/realtime_example/: main.cpp
Ichor/examples/serializer_example/: main.cpp
Ichor/examples/tcp_example/: main.cpp
Ichor/examples/timer_example/: main.cpp
Ichor/examples/tracker_example/: RuntimeCreatedService.h  main.cpp
Ichor/examples/websocket_example/: main.cpp
Ichor/examples/yielding_timer_example/: OtherTimerService.h  UsingTimerService.h  main.cpp
Ichor/include/ichor/: CommunicationChannel.h  DependencyManager.h  Events.h  bst.h  lock_free_bst.h
Ichor/include/ichor/optional_bundles/timer_bundle/: ITimer.h  TimerService.h
Ichor/include/ichor/stl/: ConditionVariable.h
Ichor/logs/: framework-log-1620241496466.txt  framework-log-1620242814692.txt  framework-log-1620635339344.txt  framework-log-1620635731715.txt  framework-log-1620635835504.txt  framework-log-1620816403257.txt
Ichor/src/ichor/: DependencyManager.cpp
Ichor/src/optional_bundles/logging_bundle/: SpdlogSharedService.cpp
Ichor/test/: DependencyServicesTests.cpp  Makefile  cmake_install.cmake
Kernel_Imp/: 1thread  Makefile  OtherTimer.cpp  a.out  concurrent  concurrent.cpp  hrtimer  hrtimer.cpp  kernel_EDF  kernel_EDF.cpp  mutexes  task_generator.py
Kernel_Imp/FIFO_example/: kernel_fifo  kernel_fifo.cpp
Kernel_Imp/cpu0/: mutex.h
Lockless/: Makefile
Lockless/check/: a.out  lock_free_bst.h  main.cpp
Lockless/src/: lock_free_bst.cpp  lock_free_bst.h  main.cpp  single_threaded_tests.cpp  single_threaded_tests.h  testing.h  utils.h
